crates/lsp/src/snapshots/wrela_lsp__tests__completion_members_after_dot.snap
---
source: crates/lsp/src/lib.rs
expression: labels(items)
---
[
    "A",
    "An",
    "Foo",
    "and",
    "await",
    "break",
    "can",
    "changing",
    "continue",
    "crash",
    "detach",
    "else",
    "err",
    "false",
    "fire",
    "foo",
    "for",
    "from",
    "has",
    "if",
    "in",
    "it",
    "its",
    "main",
    "match",
    "n",
    "not",
    "nothing",
    "optimize",
    "or",
    "otherwise",
    "private",
    "public",
    "return",
    "spawn",
    "to",
    "true",
    "use",
    "while",
]
