crates/lsp/src/snapshots/wrela_lsp__tests__goto_definition_for_member.snap
---
source: crates/lsp/src/lib.rs
assertion_line: 4935
expression: range
---
Some(
    Range {
        start: Position {
            line: 6,
            character: 8,
        },
        end: Position {
            line: 6,
            character: 11,
        },
    },
)
