crates/lsp/src/snapshots/wrela_lsp__tests__references_in_document.snap
---
source: crates/lsp/src/lib.rs
expression: ranges
---
[
    Range {
        start: Position {
            line: 2,
            character: 4,
        },
        end: Position {
            line: 2,
            character: 5,
        },
    },
    Range {
        start: Position {
            line: 3,
            character: 8,
        },
        end: Position {
            line: 3,
            character: 9,
        },
    },
    Range {
        start: Position {
            line: 3,
            character: 12,
        },
        end: Position {
            line: 3,
            character: 13,
        },
    },
]
