crates/lsp/src/snapshots/wrela_lsp__tests__rename_edits_for_identifier.snap
---
source: crates/lsp/src/lib.rs
expression: edits
---
Some(
    [
        TextEdit {
            range: Range {
                start: Position {
                    line: 2,
                    character: 4,
                },
                end: Position {
                    line: 2,
                    character: 5,
                },
            },
            new_text: "total",
        },
        TextEdit {
            range: Range {
                start: Position {
                    line: 3,
                    character: 8,
                },
                end: Position {
                    line: 3,
                    character: 9,
                },
            },
            new_text: "total",
        },
        TextEdit {
            range: Range {
                start: Position {
                    line: 3,
                    character: 12,
                },
                end: Position {
                    line: 3,
                    character: 13,
                },
            },
            new_text: "total",
        },
    ],
)
